--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ Flask-SQLAlchemy==3.0.4
 Flask-Migrate==4.0.4
 Flask-Cors==3.0.10
 Flask-JWT-Extended==4.4.4
-Flasgger==0.9.7.1
+flasgger==0.9.7.1
+apispec==6.3.0
+marshmallow==3.20.1
 psycopg2-binary==2.9.7
 pytest==7.3.1
 pytest-flask==1.2.0
